tests/build/fail/widget/declared_property_not_captured.stderr
error: property `foo` is declared in widget, but is not captured by the widget
 --> $DIR/declared_property_not_captured.rs:8:9
  |
8 |         foo: impl IntoVar<bool>;
  |         ^^^
